chore: 💄 clearer color grading (cg) slider labels
Slightly edited original labels are in the tooltips instead.

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -727,32 +727,55 @@ option.VIBRANCE=Vibrance
 option.VIBRANCE.comment=Adjusts saturation of less saturated colors, well saturated colors are less affected.
 
 #Color Grading Config
-option.CG_RR=Red - Red Value
-option.CG_RG=Red - Green Value
-option.CG_RB=Red - Blue Value
-option.CG_RI=Red Strength Value
-option.CG_RM=Minimal Red Value
-option.CG_RC=Red Curve Value
+option.CG_RR=§cR§r -> §cR
+option.CG_RR.comment=Red - Red Value
+option.CG_RG=§cR§r -> §aG
+option.CG_RG.comment=Red - Green Value
+option.CG_RB=§cR§r -> §9B
+option.CG_RB.comment=Red - Blue Value
+option.CG_RI=§cR§r
+option.CG_RI.comment=Red Strength Value
+option.CG_RM=Min §cR§r
+option.CG_RM.comment=Minimum Red Value
+option.CG_RC=§cR§r Curve
+option.CG_RC.comment=Red Curve Value
 
-option.CG_GR=Green - Red Value
-option.CG_GG=Green - Green Value
-option.CG_GB=Green - Blue Value
-option.CG_GI=Green Strength Value
-option.CG_GM=Minimal Green Value
-option.CG_GC=Green Curve Value
+option.CG_GR=§aG§r -> §cR
+option.CG_GR.comment=Green - Red Value
+option.CG_GG=§aG§r -> §aG
+option.CG_GG.comment=Green - Green Value
+option.CG_GB=§aG§r -> §9B
+option.CG_GB.comment=Green - Blue Value
+option.CG_GI=§aG§r
+option.CG_GI.comment=Green Strength Value
+option.CG_GM=Min §aG§r
+option.CG_GM.comment=Minimum Green Value
+option.CG_GC=§aG§r Curve
+option.CG_GC.comment=Green Curve Value
 
-option.CG_BR=Blue - Red Value
-option.CG_BG=Blue - Green Value
-option.CG_BB=Blue - Blue Value
-option.CG_BI=Blue Strength Value
-option.CG_BM=Minimal Blue Value
-option.CG_BC=Blue Curve Value
+option.CG_BR=§9B§r -> §cR
+option.CG_BR.comment=Blue - Red Value
+option.CG_BG=§9B§r -> §aG
+option.CG_BG.comment=Blue - Green Value
+option.CG_BB=§9B§r -> §9B
+option.CG_BB.comment=Blue - Blue Value
+option.CG_BI=§9B§r
+option.CG_BI.comment=Blue Strength Value
+option.CG_BM=Min §9B§r
+option.CG_BM.comment=Minimum Blue Value
+option.CG_BC=§9B§r Curve
+option.CG_BC.comment=Blue Curve Value
 
-option.CG_TR=Tint - Red Value
-option.CG_TG=Tint - Green Value
-option.CG_TB=Tint - Blue Value
-option.CG_TI=Tint Strength Value
-option.CG_TM=Tint Mix Value
+option.CG_TR=§cR§r Tint
+option.CG_TR.comment=Tint - Red Value
+option.CG_TG=§aG§r Tint
+option.CG_TG.comment=Tint - Green Value
+option.CG_TB=§9B§r Tint
+option.CG_TB.comment=Tint - Blue Value
+option.CG_TI=Tint
+option.CG_TI.comment=Tint Strength Value
+option.CG_TM=Tint Mix
+option.CG_TM.comment=Tint Mix Value
 
 #Extras
 option.OUTLINE=Outline
