chore: 💄 cpf - `ns` screen items

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -810,3 +810,36 @@ option.WAVING_LANTERN.comment=Allows lantern to wave.
 
 screen.NS=§lBSL-§c§lNS§r §ov0.1§r...
 screen.NS.comment=Noisysundae's BSL Extension\n———\n\nClick to expand settings related to BSL-NS features.
+
+option.NS_CPF_ENABLED=Camera Proximity Fade (CPF)
+option.NS_CPF_ENABLED.comment=Dithering away photobombing entities and particles.
+screen.NS_CPF=CPF Settings...
+screen.NS_CPF.comment=Expand other CPF settings.
+option.NS_CPF_DIST_THRESHOLD_FIRST_PERSON=Distance Threshold
+option.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.comment=Distance from the first-person camera the fade starts kicking in.
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.05=0.05 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.1=0.1 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.15=0.15 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.2=0.2 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.25=0.25 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.3=0.3 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.4=0.4 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.5=0.5 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.75=0.75 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.1.0=1 Block
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.1.5=1.5 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.2.0=2 Blocks
+option.NS_CPF_DIST_THRESHOLD_THIRD_PERSON=Distance Threshold (Third Person View)
+option.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.comment=Distance from the third-person camera the fade starts kicking in.
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.05=0.05 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.1=0.1 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.2=0.2 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.3=0.3 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.4=0.4 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.5=0.5 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.75=0.75 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.1.0=1 Block
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.1.5=1.5 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.2.0=2 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.3.0=3 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.4.0=4 Blocks
