--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -816,3 +816,18 @@ option.WAVING_LANTERN.comment=Allows lantern to wave.
 
 screen.NS=§lBSL-§c§lNS§r §ov0.1§r...
 screen.NS.comment=Noisysundae's BSL Extension\n———\n\nClick to expand settings related to BSL-NS features.
+
+option.NS_CA_ENABLED=Climatic Animations (CA)
+option.NS_CA_ENABLED.comment=Apply environment factors to waving objects and water (climate, indoor / outdoor, etc.), as well as some improvement related to animations.
+screen.NS_CA=CA Settings...
+screen.NS_CA.comment=Expand other CA settings.
+option.NS_CA_TEMPERATURE_WEIGHT=Temperature Weight
+option.NS_CA_TEMPERATURE_WEIGHT.comment=More temperate (closer to 0.5 the temperature on the current biome) = windier.
+option.NS_CA_RAINFALL_WEIGHT=Rainfall Weight
+option.NS_CA_RAINFALL_WEIGHT.comment=a.k.a Downfall / Humidity\nDryer (less rainfall on the current biome) = windier.
+option.NS_CA_WEATHER_WEIGHT=Weather Weight
+option.NS_CA_WEATHER_WEIGHT.comment=Somewhat stronger wind when raining, and significantly stronger during a thunderstorm.
+option.NS_CA_ALTITUDE_WEIGHT=Altitude Weight
+option.NS_CA_ALTITUDE_WEIGHT.comment=Higher = windier
+option.NS_CA_INDOOR_WEIGHT=Indoor Weight
+option.NS_CA_INDOOR_WEIGHT.comment=Less waving for indoor blocks. §e[*]§r Due to renderer's limitation, uses player's sky light level for calculation rather than each block's.
