chore(`glsl`): ⚙️ cpf - extended distance

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -835,6 +835,8 @@ value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.0.75=0.75 Blocks
 value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.1.0=1 Block
 value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.1.5=1.5 Blocks
 value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.2.0=2 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.3.0=3 Blocks
+value.NS_CPF_DIST_THRESHOLD_FIRST_PERSON.4.0=4 Blocks
 option.NS_CPF_DIST_THRESHOLD_THIRD_PERSON=Distance Threshold (Third Person View)
 option.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.comment=Distance from the third-person camera the fade starts kicking in.
 value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.0.05=0.05 Blocks
@@ -849,3 +851,7 @@ value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.1.5=1.5 Blocks
 value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.2.0=2 Blocks
 value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.3.0=3 Blocks
 value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.4.0=4 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.5.0=5 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.6.0=6 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.7.0=7 Blocks
+value.NS_CPF_DIST_THRESHOLD_THIRD_PERSON.8.0=8 Blocks
